tests/ui/singleton-f-1.stderr
error: attempted to construct a singleton fn from function that has no inputs (must have at least a reference receiver - &self or &mut self)
  --> $DIR/singleton-f-1.rs:12:18
   |
12 |     pub async fn is_vec_empty() -> bool {
   |                  ^^^^^^^^^^^^

error: attempted to construct a singleton fn from function that has no inputs (must have at least a reference receiver - &self or &mut self)
  --> $DIR/singleton-f-1.rs:17:14
   |
17 |     async fn clear() {
   |              ^^^^^

error: first function argument _ (type: usize) must be a reference receiver (&self or &mut self)
  --> $DIR/singleton-f-1.rs:22:26
   |
22 |     pub async fn get_set(_: usize, _: i32) -> Option<i32> {
   |                          ^

error: first function argument _ (type: Box < [i32] >) must be a reference receiver (&self or &mut self)
  --> $DIR/singleton-f-1.rs:27:31
   |
27 |     pub async fn check_equals(_: Box<[i32]>) -> bool {
   |                               ^
